--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Profil"
+        android:text="Akun"
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
