--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -94,8 +94,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Debit"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/blue"/>
+                android:textColor="@color/black"
+                android:backgroundTint="@color/white"/>
 
             <Button
                 android:id="@+id/btnCod"
@@ -143,11 +143,28 @@
                 android:contentDescription="Edit Icon" />
         </LinearLayout>
 
-        <View
+        //Saldo
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#E0E0E0"
-            android:layout_marginVertical="16dp" />
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Saldo"
+                android:layout_marginEnd="180dp"/>
+
+            <TextView
+                android:id="@+id/SaldoTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:text="Rp 0"
+                android:textStyle="bold" />
+        </LinearLayout>
+
 
         <!-- Section: Ringkasan Pemesanan -->
         <TextView
@@ -174,7 +191,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:text="Rp 400.000"
+                android:text="Rp 0"
                 android:textStyle="bold" />
         </LinearLayout>
         <LinearLayout
@@ -230,7 +247,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:text="Rp 400.000"
+                android:text="Rp 0"
                 android:textStyle="bold" />
 
         </LinearLayout>
