--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,6 +24,25 @@
             android:layout_marginBottom="24dp" />
 
         <TextView
+            android:id="@+id/tvNama"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nama"
+            android:textSize="16sp"
+            android:layout_gravity="start"
+            android:textColor="#000000" />
+
+        <EditText
+            android:id="@+id/etNama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Masukkan Nama"
+            android:inputType="text"
+            android:background="@drawable/edittext_backgroud"
+            android:padding="12dp"
+            android:layout_marginBottom="16dp" />
+
+        <TextView
             android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,12 +99,11 @@
                 android:background="@drawable/edittext_backgroud"
                 android:padding="12dp"
                 android:layout_marginBottom="16dp" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginBottom="16dp">
+            android:layout_marginBottom="1dp">
 
             <CheckBox
                 android:id="@+id/cbTerms"
@@ -93,7 +111,7 @@
                 android:layout_height="wrap_content"
                 android:text="Setuju dengan"
                 android:textColor="#000000"
-                android:layout_marginBottom="24dp" />
+                android:layout_marginBottom="2dp" />
 
             <TextView
                 android:id="@+id/tvTermsAndConditions"
@@ -112,12 +130,6 @@
             android:text="Daftar"
             android:textColor="@android:color/white"
             android:padding="12dp" />
-
-
-
-
-
-
 
     </LinearLayout>
 
