--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product Name"
+            android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
             android:ellipsize="end"
@@ -44,8 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Size"
-            android:textSize="14sp"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@color/black"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/productPrice"
@@ -80,6 +81,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             android:gravity="center"
+            android:textColor="@color/black"
             android:paddingHorizontal="8dp" />
 
         <ImageView
