--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Akun"
+        android:textColor="@color/black"
         android:gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
