--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
             android:inputType="textEmailAddress"
             android:background="@drawable/edittext_backgroud"
             android:padding="12dp"
+            android:textColor="@color/black"
  />
         <TextView
             android:id="@+id/tvNoteEmail"
@@ -66,7 +67,8 @@
             android:inputType="textPassword"
             android:background="@drawable/edittext_backgroud"
             android:padding="12dp"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="8dp"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/tvNotePassword"
