--- a/app/src/main/res/layout/message_screen.xml
+++ b/app/src/main/res/layout/message_screen.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,6 +12,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:text="Pesan"
+        android:textColor="@color/black"
         android:layout_marginVertical="18dp"
         />
     <androidx.recyclerview.widget.RecyclerView
