--- a/app/src/main/res/layout/popup_success.xml
+++ b/app/src/main/res/layout/popup_success.xml
@@ -33,5 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
         android:text="Selesai" />
 </LinearLayout>
