--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -6,14 +6,15 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+    android:background="@color/white">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp"
-    >
+android:background="@color/white"    >
 
     <!-- Gambar Produk -->
     <ImageView
@@ -31,7 +32,8 @@
         android:text="Product Name"
         android:textSize="16sp"
         android:gravity="center"
-        android:paddingTop="8dp" />
+        android:paddingTop="8dp"
+        android:textColor="@color/black"/>
 
     <!-- Harga Produk -->
     <TextView
@@ -42,7 +44,8 @@
         android:textSize="14sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:paddingTop="4dp" />
+        android:paddingTop="4dp"
+        android:textColor="@color/black"/>
     <TextView
         android:id="@+id/tvProductRate"
         android:layout_width="match_parent"
