--- a/app/src/main/res/layout/profil.xml
+++ b/app/src/main/res/layout/profil.xml
@@ -3,17 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profil"
+        android:textColor="@color/black"
         android:layout_gravity="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="#000000"
         android:layout_marginBottom="24dp" />
 
 
@@ -32,6 +33,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_backgroud"
         android:text="Nama"
+        android:textColor="@color/black"
         android:padding="12dp"
         android:layout_marginBottom="16dp" />
 
@@ -47,7 +49,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_backgroud"
-        android:text="Nama"
+        android:text="Email"
+        android:textColor="@color/black"
         android:padding="12dp"
         android:layout_marginBottom="16dp" />
     <TextView
@@ -57,7 +60,8 @@
         android:text="Tanggal Lahir"
         android:textSize="16sp"
         android:layout_gravity="start"
-        android:textColor="#000000" />
+        android:textColor="@color/black"
+        />
 
     <TextView
         android:id="@+id/etTgl"
@@ -65,6 +69,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_backgroud"
         android:text="Tanggal"
+        android:textColor="@color/black"
         android:padding="12dp"
         android:layout_marginBottom="16dp" />
 
@@ -84,6 +89,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_backgroud"
         android:text="Jenis Kelmaun"
+        android:textColor="@color/black"
         android:padding="12dp"
         android:layout_marginBottom="16dp" />
 
@@ -92,9 +98,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nomor Telepon"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_gravity="start"
-        android:textColor="#000000" />
+         />
 
     <TextView
         android:id="@+id/etNoTelp"
@@ -102,6 +109,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_backgroud"
         android:text="Nomor Telepon"
+        android:textColor="@color/black"
         android:padding="12dp"
         android:layout_marginBottom="16dp" />
 
