--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -28,9 +28,16 @@
                 android:textStyle="bold"
                 android:layout_gravity="center"
                 android:textSize="20sp"
-                android:layout_marginBottom="30dp" />
+                android:layout_marginBottom="3dp" />
 
-        <TextView
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#E0E0E0"
+                android:layout_marginVertical="16dp" />
+
+
+            <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Alamat Pengiriman"
