--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -17,8 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -35,9 +34,10 @@
                 android:id="@+id/productImageView"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:padding="8dp"
+                android:src="@drawable/treadmil"
+                android:scaleType="fitCenter"
                 android:layout_marginTop="20dp" />
+
 
             <!-- Nama Produk -->
             <TextView
