--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Masukkan email"
+            android:textColorHint="@color/oldGrey"
             android:inputType="textEmailAddress"
             android:background="@drawable/edittext_backgroud"
             android:padding="12dp"
@@ -64,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Masukkan password"
+            android:textColorHint="@color/oldGrey"
             android:inputType="textPassword"
             android:background="@drawable/edittext_backgroud"
             android:padding="12dp"
